# workflow-simulator-for-calibration

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_simulator_only  README.md  calibrate.py  chameleon_install_script.sh  config-calibrate.json  experementalplan.md  expirementalplan.md  requirements.txt  torun.txt
calibration/: Loss.py  README  Simulator.py  Util.py  WorkflowSimulatorCalibrator.py  builddata.py  calibrate.py  calibrate_evaluate.py  calibration_from_pickle.py  cd1800preview.txt  cd3600preview.txt  cd86400preview.txt  config.json  experiment_utils.py  experiment_vary_larger_tasks_fix_arch_wf_nodes.py  experiment_vary_nodes.py  experiment_vary_tasks.py  fixRawData.sh  fixheatmapdat.py  gen_median_runs.py  generate_synthetic_data.py  gradient_descent_hyperparameters.py  heatmapdata.py  just_eval.py  multi_workflow_heatmap.py  paper_heatmap.py  pickle_format.txt  pickle_to_json.py  plot_execution_noise.py  pointcloud.py  prettydata.py  previewData.py  process_overfitting_experiments.py  process_single_workflow_experiments.py  process_sophistication_expiriments.py  process_synthetic_experiments.py  process_synthetic_experiments_agrigated.py  process_workflow_generalization_experiments.py  quantify_execution_noise.py  ratio_heatmap.py  (+12 more)
calibration_OLD/: calibrate.py  config.json  experiment_vary_nodes.py  experiment_vary_tasks_fix_arch_wf_nodes.py  plot_density.py  plot_rs_bo.py  requirements.txt  run_some_stuff.bash  workflow_queries.py
data/: sample_htcondor_bare_metal_submit_and_compute_hosts_one_and_then_many_links.json  sample_input.json  sample_input_try.json  sample_platform.xml  sample_workflow.json
include/: Controller.h  PlatformCreator.h  UnitParser.h
simcal/: Simulator.py  Util.py  WorkflowSimulatorCalibrator.py  calibrate_evaluate.py  process_single_workflow_experiments.py  process_workflow_generalization_experiments.py  quantify_execution_noise.py  run_all_single_workflow_experiments.sh  run_all_workflow_generalization_experiments.sh  (+4 more)
src/: Controller.cpp  (+3 more)
(+12 files in other folders)
